[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nllegalcit"
version = "0.0.1"
authors = [
    { name="Martijn Staal", email="nllegalcit@martijn-staal.nl" },
]
description = "Python library to find citations to Dutch legal documents in natural language text"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)"
]

[project.urls]
Homepage = "https://github.com/mastaal/nllegalcit"
Issues = "https://github.com/mastaal/nllegalcit/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"nllegalcit.grammars" = ["*.lark"]
